TEST_PROGRAMS/INVALID/mathieu_boucher/invalid4.min
#no semicolon at the end of do's and if's

var x : int;
var y : int;

x = y = 3;

if x then
	y = 5;
endif;

while x do
	y = 5;
done;
